# home3d-viewer

./: .gitignore  LICENSE  README.md
docs/: usage.md
htdocs/: bootstrap.html  index.html  sandwich.blob  viewer.html
htdocs/data/: arrow.json  markers.json  monkey.json
htdocs/data/curiosity.sol1112/: node-0.blob  node-1.blob  node-4.blob  node-41.blob  node-44.blob  node-45.blob  node-450.blob  node-454.blob  node-455.blob  node-456.blob  node-457.blob  node-46.blob  node-460.blob  node-462.blob  node-464.blob  node-465.blob  node-466.blob  node-467.blob  node-47.blob  node-471.blob  node-474.blob  node-475.blob  node-476.blob  node-477.blob  node-5.blob  node-50.blob  node-54.blob  node-56.blob  node-57.blob  node-6.blob  node-60.blob  node-61.blob  node-62.blob  node-63.blob  node-64.blob  node-65.blob  node-67.blob  node-7.blob  node-70.blob  node-71.blob  (+7 more)
htdocs/data/son/: metadata.json
htdocs/data/son2/: metadata.json  metadata_old.json  node-0.blob  node-02.blob  node-020.blob  node-021.blob  (+542 more)
htdocs/scripts/: aabb.js  camera.js  drawingApp.js  framebuffer.js  geometry.js  main.js  markers.js  obb.js  octree.js  pointcloud.js  ray.js  reimg.js  renderer.js  shader.js  spatial-metadata.js
htdocs/shaders/: obb.vert  object.frag  object.vert  points.frag  points.vert
tools/MakeMetadata/: CMakeLists.txt  main.cpp  vizhomeList.csv
tools/MakeOctree/: AABB.h  CMakeLists.txt  MakeOctree.sln  MakeOctree.vcxproj  Octree.cpp  Octree.h  Point.h  main.cpp
tools/Ply2Json/: ply2json.py
tools/blobcompress/: main.cpp
tools/pcl2blob/: CMakeLists.txt  main.cpp
(+3 files in other folders)
